fix: fix unit test InMemoryHistoryManager due to its new implementation